apps/40-network/netvisor/overlays/test/http-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: networking
spec:
  redirectScheme:
    scheme: https
    permanent: true
