apps/40-network/netvisor/overlays/test/kustomization.yaml
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization

resources:
  - ../../base
  - http-redirect.yaml
  - ingress.yaml

patches:
  - target:
      kind: InfisicalSecret
      name: netvisor-secrets-sync
    patch: |-
      - op: replace
        path: /spec/authentication/universalAuth/secretsScope/envSlug
        value: test
